--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,82 @@
-absl-py==1.0.0
-altair==4.1.0
-appnope==0.1.2
-argon2-cffi==20.1.0
+appdirs==1.4.4
 asgiref==3.5.2
-astroid==2.7.2
-astunparse==1.6.3
-attrs==21.2.0
-backcall==0.2.0
-bleach==4.0.0
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.14.6
-charset-normalizer==2.0.7
+atomicwrites==1.4.0
+attrs==20.3.0
+backports.zoneinfo==0.2.1
+blinker==1.5
+certifi==2020.12.5
+chardet==4.0.0
+click==8.1.3
+colorama==0.4.4
+commonmark==0.9.1
 cycler==0.10.0
-DateTime==4.3
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
+dask==2021.1.1
+decorator==4.4.2
 distlib==0.3.6
 dj-database-url==1.0.0
 Django==4.1.2
 django-on-heroku==1.1.2
-entrypoints==0.3
+djangorestframework==3.14.0
+docutils==0.19
+feedgenerator==2.0.0
 filelock==3.8.0
-flatbuffers==2.0
-gast==0.4.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.42.0
+ghp-import==2.1.0
 gunicorn==20.1.0
-h5py==3.6.0
-idna==3.3
-importlib-metadata==4.8.2
-ipykernel==6.2.0
-ipython==7.26.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.9.3
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==7.0.1
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-keras==2.7.0
-Keras-Preprocessing==1.1.2
+idna==2.10
+imageio==2.9.0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+iniconfig==1.1.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.16.0
 kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-libclang==12.0.0
-Markdown==3.3.6
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-missingno==0.5.0
-mistune==0.8.4
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.2
-oauthlib==3.1.1
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.3.2
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.3.3
+networkx==2.5
+nltk==3.7
+numpy==1.19.5
+opencv-contrib-python==4.5.1.48
+packaging==20.8
+painter==0.3.1
+pelican==4.8.0
+Pillow==8.1.0
+pkgutil_resolve_name==1.3.10
 platformdirs==2.5.2
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-protobuf==3.19.1
+pluggy==0.13.1
 psycopg2-binary==2.9.4
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pygame==2.0.1
-Pygments==2.10.0
-pylint==2.10.2
+py==1.10.0
+pybind11==2.6.1
+pyerfa==1.7.1.1
+pygame==1.9.6
+Pygments==2.13.0
+pymongo==4.0
 pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.10.0
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-learn==0.24.2
-scipy==1.7.1
-seaborn==0.11.2
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0
+pyproject-toml==0.0.10
+pyrsistent==0.18.1
+pytest==6.2.2
+python-dateutil==2.8.1
+pytz==2022.4
+PyWavelets==1.1.1
+PyYAML==5.4.1
+QtPy==1.9.0
+regex==2022.9.13
+requests==2.25.1
+rich==12.6.0
+scikit-image==0.18.1
+scipy==1.6.0
+SimpleITK==1.2.4
+six==1.15.0
 sqlparse==0.4.3
-telnetlib3==1.0.4
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==1.1.0
-terminado==0.11.1
-testpath==0.5.0
-threadpoolctl==2.2.0
+tifffile==2021.1.14
 toml==0.10.2
 toolz==0.11.1
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.0.5
-typing_extensions==4.0.0
-urllib3==1.26.7
+tqdm==4.64.1
+typing_extensions==4.4.0
+tzdata==2022.5
+Unidecode==1.3.6
+urllib3==1.26.3
 virtualenv==20.16.5
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.2
 whitenoise==6.2.0
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-zipp==3.6.0
-zope.interface==5.4.0
+zipp==3.9.0
